--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,143 +3,219 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="#eee"
     android:gravity="center_horizontal"
     android:layout_height="match_parent"
     >
 
 
     <EditText
+        android:background="@drawable/display"
+        android:padding="10dp"
+        android:textSize="24dp"
         android:gravity="right"
         android:text="0"
+        android:textColor="#000"
         android:editable="false"
-        android:layout_margin="10dp"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/display"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-    <LinearLayout
+        android:layout_height="60dp"
+        android:id="@+id/display" />
+
+    <TableLayout
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <TableRow
+        android:layout_weight="1"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:onClick="seven"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="7"
             />
 
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:onClick="eight"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="8"/>
 
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="9"
             android:onClick="nine"/>
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="*"
             android:onClick="mul"/>
-    </LinearLayout>
-    <LinearLayout
+    </TableRow>
+    <TableRow
+        android:layout_weight="1"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:onClick="four"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="4"/>
 
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:onClick="five"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="5"/>
 
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="6"
             android:onClick="six"/>
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="/"
             android:onClick="divide"/>
-    </LinearLayout>
-    <LinearLayout
+    </TableRow>
+    <TableRow
+        android:layout_weight="1"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:onClick="one"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="1"/>
 
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:onClick="two"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="2"/>
 
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="3"
             android:onClick="three"/>
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="+"
             android:onClick="plus"/>
 
-    </LinearLayout>
-    <LinearLayout
+    </TableRow>
+    <TableRow
+        android:layout_weight="1"
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="0"
             android:onClick="zero"/>
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="20dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="-"
-            android:onClick="minus"/>
+            android:layout_height="match_parent"
+            android:text="CLR"
+            android:onClick="clear"/>
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="="
             android:onClick="equal"/>
         <Button
+            android:textColor="#ffff"
+            android:background="#595959"
+            android:textSize="40dp"
+            android:layout_weight="1"
             android:padding="20dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CLR"
-            android:onClick="clear"/>
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:text="-"
+            android:onClick="minus"/>
+    </TableRow></TableLayout>
 </LinearLayout>
